--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-photoswipe-gallery": "^2.2.6",
     "react-scripts": "5.0.1",
+    "shade-generator": "^1.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
